Fix responsiveness (Prince)

--- a/index copy.html
+++ b/index copy.html
@@ -7,11 +7,13 @@
 	<meta http-equiv="Content-Language" content="en">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>GYMBLE MANAGER DASHBOARD</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
-	<meta name="description" content="Tabs are used to split content between multiple sections. Wide variety available.">
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
+	<meta name="description"
+		content="Tabs are used to split content between multiple sections. Wide variety available.">
 	<meta name="msapplication-tap-highlight" content="no">
-	<link href="./main.css" rel="stylesheet">
-	
+	<link rel="stylesheet" href="./main.css">
+	<link rel="stylesheet" href="./custom.css">
 </head>
 
 <body>
@@ -25,8 +27,9 @@
 				</div>
 				<div class="header__pane ml-auto">
 					<div>
-						<button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar"> <span class="hamburger-box">
-                                <span class="hamburger-inner"></span>
+						<button type="button" class="hamburger close-sidebar-btn hamburger--elastic"
+							data-class="closed-sidebar"> <span class="hamburger-box">
+								<span class="hamburger-inner"></span>
 							</span>
 						</button>
 					</div>
@@ -34,18 +37,20 @@
 			</div>
 			<div class="app-header__mobile-menu">
 				<div>
-					<button type="button" class="hamburger hamburger--elastic mobile-toggle-nav"> <span class="hamburger-box">
-                            <span class="hamburger-inner"></span>
+					<button type="button" class="hamburger hamburger--elastic mobile-toggle-nav"> <span
+							class="hamburger-box">
+							<span class="hamburger-inner"></span>
 						</span>
 					</button>
 				</div>
 			</div>
 			<div class="app-header__menu"> <span>
-                    <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                        <span class="btn-icon-wrapper">
-                            <i class="fa fa-ellipsis-v fa-w-6"></i>
-                        </span>
-				</button>
+					<button type="button"
+						class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
+						<span class="btn-icon-wrapper">
+							<i class="fa fa-ellipsis-v fa-w-6"></i>
+						</span>
+					</button>
 				</span>
 			</div>
 			<div class="app-header__content">
@@ -65,11 +70,15 @@
 							<div class="widget-content-wrapper">
 								<div class="widget-content-left">
 									<div class="btn-group">
-										<a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn">
-											<img width="42" class="rounded-circle" src="assets/images/avatars/1.jpg" alt=""> <i class="fa fa-angle-down ml-2 opacity-8"></i>
+										<a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+											class="p-0 btn">
+											<img width="42" class="rounded-circle" src="assets/images/avatars/1.jpg"
+												alt=""> <i class="fa fa-angle-down ml-2 opacity-8"></i>
 										</a>
-										<div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
-											<button type="button" tabindex="0" class="dropdown-item">User Account</button>
+										<div tabindex="-1" role="menu" aria-hidden="true"
+											class="dropdown-menu dropdown-menu-right">
+											<button type="button" tabindex="0" class="dropdown-item">User
+												Account</button>
 											<div tabindex="-1" class="dropdown-divider"></div>
 											<button type="button" tabindex="0" class="dropdown-item">Log out</button>
 										</div>
@@ -80,7 +89,9 @@
 									<div class="widget-subheading">VP People Manager</div>
 								</div>
 								<div class="widget-content-right header-user-info ml-3">
-									<button type="button" class="btn-shadow p-1 btn btn-primary btn-sm show-toastr-example"> <i class="fa text-white fa-calendar pr-1 pl-1"></i>
+									<button type="button"
+										class="btn-shadow p-1 btn btn-primary btn-sm show-toastr-example"> <i
+											class="fa text-white fa-calendar pr-1 pl-1"></i>
 									</button>
 								</div>
 							</div>
@@ -95,8 +106,9 @@
 					<div class="logo-src"></div>
 					<div class="header__pane ml-auto">
 						<div>
-							<button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar"> <span class="hamburger-box">
-                                        <span class="hamburger-inner"></span>
+							<button type="button" class="hamburger close-sidebar-btn hamburger--elastic"
+								data-class="closed-sidebar"> <span class="hamburger-box">
+									<span class="hamburger-inner"></span>
 								</span>
 							</button>
 						</div>
@@ -104,18 +116,20 @@
 				</div>
 				<div class="app-header__mobile-menu">
 					<div>
-						<button type="button" class="hamburger hamburger--elastic mobile-toggle-nav"> <span class="hamburger-box">
-                                    <span class="hamburger-inner"></span>
+						<button type="button" class="hamburger hamburger--elastic mobile-toggle-nav"> <span
+								class="hamburger-box">
+								<span class="hamburger-inner"></span>
 							</span>
 						</button>
 					</div>
 				</div>
 				<div class="app-header__menu"> <span>
-                            <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                                <span class="btn-icon-wrapper">
-                                    <i class="fa fa-ellipsis-v fa-w-6"></i>
-                                </span>
-					</button>
+						<button type="button"
+							class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
+							<span class="btn-icon-wrapper">
+								<i class="fa fa-ellipsis-v fa-w-6"></i>
+							</span>
+						</button>
 					</span>
 				</div>
 				<div class="scrollbar-sidebar">
@@ -132,19 +146,19 @@
 							</li>
 							<li class="app-sidebar__heading">Setting</li>
 							<li>
-								<a href="index copy 2.html">	<i class="metismenu-icon pe-7s-mouse">
+								<a href="index copy 2.html"> <i class="metismenu-icon pe-7s-mouse">
 									</i>GYM PROFILE</a>
 							</li>
 							<li>
-								<a href="trainer.html">	<i class="metismenu-icon pe-7s-id">
+								<a href="trainer.html"> <i class="metismenu-icon pe-7s-id">
 									</i>Trainer Info</a>
 							</li>
 							<li>
-								<a href="Amenities.html">	<i class="metismenu-icon pe-7s-news-paper">
+								<a href="Amenities.html"> <i class="metismenu-icon pe-7s-news-paper">
 									</i>Amenities</a>
 							</li>
 							<li>
-								<a href="photo section.html">	<i class="metismenu-icon pe-7s-photo">
+								<a href="photo section.html"> <i class="metismenu-icon pe-7s-photo">
 									</i>Photos section</a>
 							</li>
 						</ul>
@@ -154,28 +168,54 @@
 			<div class="app-main__outer">
 				<div class="app-main__inner">
 					<ul class="nav nav-pills mb-3 wrapper" id="pills-tab" role="tablist">
-						<li class="nav-item">	<a class="nav-link " id="pills-home-tab" data-toggle="pill" href="#pills" aria-selected="false">BOOKING</a>
+						<li class="nav-item"> <a class="nav-link " id="pills-home-tab" data-toggle="pill" href="#pills"
+								aria-selected="false">BOOKING</a>
 						</li>
-						<li class="nav-item"> <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">aaj ki date</a>
+						<li class="nav-item"> <a class="nav-link active" id="pills-home-tab" data-toggle="pill"
+								href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">aaj ki
+								date</a>
 						</li>
-						<li class="nav-item"> <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">kl ki date</a>
+						<li class="nav-item"> <a class="nav-link" id="pills-profile-tab" data-toggle="pill"
+								href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">kl
+								ki date</a>
 						</li>
-						<li class="nav-item"> <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">prso ki date</a>
+						<li class="nav-item"> <a class="nav-link" id="pills-contact-tab" data-toggle="pill"
+								href="#pills-contact" role="tab" aria-controls="pills-contact"
+								aria-selected="false">prso ki date</a>
+						</li>
+						<li class="nav-item"> <a class="nav-link" id="pills-contact-tab" data-toggle="pill"
+								href="#pills-contact" role="tab" aria-controls="pills-contact"
+								aria-selected="false">narso ki date</a>
+						</li>
+						<li class="nav-item"> <a class="nav-link" id="pills-contact-tab" data-toggle="pill"
+								href="#pills-contact" role="tab" aria-controls="pills-contact"
+								aria-selected="false">09/09/2020</a>
 						</li>
 					</ul>
 					<div class="tab-content" id="pills-tabContent">
-						<div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+						<div class="tab-pane fade show active" id="pills-home" role="tabpanel"
+							aria-labelledby="pills-home-tab">
 							<div class="row">
 								<div class="col-3">
-									<div class="nav flex-column nav-pills " id="v-pills-tab" role="tablist" aria-orientation="vertical">	<a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">4.00am</a>
-										<a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">5.00AM</a>
-										<a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">6.000AM</a>
-										<a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">9.00PM</a>
+									<div class="nav flex-column nav-pills " id="v-pills-tab" role="tablist"
+										aria-orientation="vertical"> <a class="nav-link active" id="v-pills-home-tab"
+											data-toggle="pill" href="#v-pills-home" role="tab"
+											aria-controls="v-pills-home" aria-selected="true">4.00am</a>
+										<a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
+											href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
+											aria-selected="false">5.00AM</a>
+										<a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
+											href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
+											aria-selected="false">6.000AM</a>
+										<a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
+											href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
+											aria-selected="false">9.00PM</a>
 									</div>
 								</div>
-								<div class="col-9 ">
+								<div class="col-8 col-md-9">
 									<div class="tab-content" id="v-pills-tabContent">
-										<div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+										<div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
+											aria-labelledby="v-pills-home-tab">
 											<div class="main-card mb-3 card">
 												<div class="card-body">
 													<h5 class="card-title">6:00 AM</h5>
@@ -208,7 +248,8 @@
 												</div>
 											</div>
 										</div>
-										<div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+										<div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
+											aria-labelledby="v-pills-profile-tab">
 											<div class="main-card mb-3 card">
 												<div class="card-body">
 													<h5 class="card-title">7:00 AM</h5>
@@ -241,7 +282,8 @@
 												</div>
 											</div>
 										</div>
-										<div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
+										<div class="tab-pane fade" id="v-pills-messages" role="tabpanel"
+											aria-labelledby="v-pills-messages-tab">
 											<div class="main-card mb-3 card">
 												<div class="card-body">
 													<h5 class="card-title">8:00 AM</h5>
@@ -274,7 +316,8 @@
 												</div>
 											</div>
 										</div>
-										<div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
+										<div class="tab-pane fade" id="v-pills-settings" role="tabpanel"
+											aria-labelledby="v-pills-settings-tab">
 											<div class="main-card mb-3 card">
 												<div class="card-body">
 													<h5 class="card-title">6:00 AM</h5>
@@ -311,18 +354,29 @@
 								</div>
 							</div>
 						</div>
-						<div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+						<div class="tab-pane fade" id="pills-profile" role="tabpanel"
+							aria-labelledby="pills-profile-tab">
 							<div class="row">
 								<div class="col-3">
-									<div class="nav flex-column nav-pills " id="v-pills-tab" role="tablist" aria-orientation="vertical">	<a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">4.00am</a>
-										<a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">5.00AM</a>
-										<a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">6.000AM</a>
-										<a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">9.00PM</a>
+									<div class="nav flex-column nav-pills " id="v-pills-tab" role="tablist"
+										aria-orientation="vertical"> <a class="nav-link active" id="v-pills-home-tab"
+											data-toggle="pill" href="#v-pills-home" role="tab"
+											aria-controls="v-pills-home" aria-selected="true">4.00am</a>
+										<a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
+											href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
+											aria-selected="false">5.00AM</a>
+										<a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
+											href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
+											aria-selected="false">6.000AM</a>
+										<a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
+											href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
+											aria-selected="false">9.00PM</a>
 									</div>
 								</div>
 								<div class="col-9">
 									<div class="tab-content" id="v-pills-tabContent">
-										<div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+										<div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
+											aria-labelledby="v-pills-home-tab">
 											<div class="main-card mb-3 card">
 												<div class="card-body">
 													<h5 class="card-title">6:00 AM</h5>
@@ -355,7 +409,8 @@
 												</div>
 											</div>
 										</div>
-										<div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+										<div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
+											aria-labelledby="v-pills-profile-tab">
 											<div class="main-card mb-3 card">
 												<div class="card-body">
 													<h5 class="card-title">7:00 AM</h5>
@@ -388,7 +443,8 @@
 												</div>
 											</div>
 										</div>
-										<div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
+										<div class="tab-pane fade" id="v-pills-messages" role="tabpanel"
+											aria-labelledby="v-pills-messages-tab">
 											<div class="main-card mb-3 card">
 												<div class="card-body">
 													<h5 class="card-title">8:00 AM</h5>
@@ -421,7 +477,8 @@
 												</div>
 											</div>
 										</div>
-										<div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
+										<div class="tab-pane fade" id="v-pills-settings" role="tabpanel"
+											aria-labelledby="v-pills-settings-tab">
 											<div class="main-card mb-3 card">
 												<div class="card-body">
 													<h5 class="card-title">6:00 AM</h5>
@@ -458,7 +515,7 @@
 								</div>
 							</div>
 						</div>
-						
+
 					</div>
 				</div>
 			</div>
